feat: add endpoint stacking-active-at-cycle, fixes #22
